--- a/app/src/main/res/layout/activity_tally.xml
+++ b/app/src/main/res/layout/activity_tally.xml
@@ -12,99 +12,95 @@
         android:id="@+id/tally1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="64dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="64dp"
-        android:layout_marginBottom="64dp"
         android:background="@drawable/shape3"
         android:elevation="4dp"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape3">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/shape3"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:orientation="vertical">
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="18dp"
-                android:background="#fff"
-                android:fontFamily="sans-serif-condensed"
-
-
-
-
-                android:onClick="historyclick"
-                android:padding="4dp"
-                android:text="Tally"
-                android:textAllCaps="true"
-                android:textColor="#04ABB6"
-                android:textSize="25sp"
-
-                android:textStyle="bold" />
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/tally"
-                android:layout_margin="8dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#fff"
-
-                android:textColor="#6B6B6B"
-                android:textSize="20sp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginRight="28dp"
-                android:layout_marginBottom="8dp"
-                android:text="A complete course on Tally ERP 9 Accounting and Inventory Software. Certificate from (CSE) e-Governance Services India Limited. Login ID is given to each student for accessing Tally (e-Learning) Contnts on CSC Portal. Online Exam on CSC Portal. "
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="18dp"
-                android:background="#fff"
-                android:fontFamily="sans-serif-condensed"
+                android:layout_height="0dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:background="@drawable/shape3"
+                android:orientation="vertical">
 
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
 
 
-                android:onClick="historyclick"
-                android:padding="4dp"
-                android:text="free"
-                android:textAllCaps="true"
-                android:textColor="#04ABB6"
-                android:textSize="25sp"
+                    android:onClick="historyclick"
+                    android:padding="4dp"
+                    android:text="Tally"
+                    android:textAllCaps="true"
+                    android:textColor="#04ABB6"
+                    android:textSize="25sp"
 
-                android:textStyle="bold" />
+                    android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#fff"
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/tally" />
 
-                android:textColor="#6B6B6B"
-                android:textSize="20sp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginRight="28dp"
-                android:layout_marginBottom="8dp"
-                android:text="Advance Accounting and Tally ERP9 : Rs. 8350\nTally ERP9 : Rs.5850"
-                />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginRight="28dp"
+                    android:background="#fff"
+                    android:text="A complete course on Tally ERP 9 Accounting and Inventory Software. Certificate from (CSE) e-Governance Services India Limited. Login ID is given to each student for accessing Tally (e-Learning) Contnts on CSC Portal. Online Exam on CSC Portal. "
+                    android:textColor="#6B6B6B"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
+
+
+                    android:onClick="historyclick"
+                    android:padding="4dp"
+                    android:text="free"
+                    android:textAllCaps="true"
+                    android:textColor="#04ABB6"
+                    android:textSize="25sp"
+
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginRight="28dp"
+                    android:background="#fff"
+                    android:text="Advance Accounting and Tally ERP9 : Rs. 8350\nTally ERP9 : Rs.5850"
+                    android:textColor="#6B6B6B"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
         </ScrollView>
     </LinearLayout>
