--- a/app/src/main/res/layout/activity_aboutexpand.xml
+++ b/app/src/main/res/layout/activity_aboutexpand.xml
@@ -4,7 +4,7 @@
     android:id="@+id/backa"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:onClick="back"
+    android:onClick="back"
     tools:context="com.education.rajneesh.jrec.MainActivity">
 
 
@@ -69,20 +69,20 @@ android:onClick="back"
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="28dp"
                     android:layout_marginTop="8dp"
-android:visibility="invisible"
-
                     android:background="#fff"
-                    android:fontFamily="sans-serif-condensed"
 
+                    android:fontFamily="sans-serif-condensed"
                     android:onClick="historyclick"
+
                     android:padding="4dp"
                     android:text="introduction"
                     android:textAllCaps="true"
                     android:textColor="#000"
                     android:textSize="20sp"
                     android:textStyle="bold"
+                    android:transitionName="@string/simple2"
 
-                    android:transitionName="@string/simple2" />
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/contacts"
@@ -98,11 +98,11 @@ android:visibility="invisible"
                     android:text="contact and location"
                     android:textAllCaps="true"
                     android:textColor="#000"
-android:visibility="invisible"
                     android:textSize="20sp"
                     android:textStyle="bold"
+                    android:transitionName="@string/simple3"
 
-                    android:transitionName="@string/simple3" />
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/gallery"
@@ -120,8 +120,8 @@ android:visibility="invisible"
                     android:textColor="#000"
                     android:textSize="20sp"
                     android:textStyle="bold"
-android:visibility="invisible"
-                    android:transitionName="@string/simple4" />
+                    android:transitionName="@string/simple4"
+                    android:visibility="invisible" />
 
 
             </LinearLayout>
