--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -12,12 +12,11 @@
         android:id="@+id/gallery123"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_margin="8dp"
         android:background="#F3F3F3"
         android:elevation="4dp"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
         <!--
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -52,9 +51,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#F3F3F3"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+            android:background="#F3F3F3"
 
             android:orientation="vertical">
 
@@ -62,11 +61,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginLeft="18dp"
+                android:layout_marginTop="8dp"
                 android:background="#F3F3F3"
                 android:fontFamily="sans-serif-condensed"
-
 
 
                 android:onClick="historyclick"
@@ -86,65 +84,65 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-android:orientation="horizontal"
+                    android:layout_height="wrap_content"
                     android:background="#F3F3F3"
-                    android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/a"
-                    android:scaleType="centerCrop"
-android:layout_gravity="center_vertical"
-                    android:layout_margin="8dp"
-                    />
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/b"
-                    android:scaleType="centerCrop"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="8dp"
-                    />
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:src="@drawable/g"
-                        android:scaleType="centerCrop"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="8dp"
-                        />
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/a" />
+
                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:src="@drawable/f"
-                        android:scaleType="centerCrop"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="8dp"
-                        />
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/b" />
+
                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:src="@drawable/e"
-                        android:scaleType="centerCrop"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="8dp"
-                        />
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/g" />
+
                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:src="@drawable/d"
-                        android:scaleType="centerCrop"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="8dp"
-                        />
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/f" />
+
                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:src="@drawable/c"
-                        android:scaleType="centerCrop"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="8dp"
-                        />
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/e" />
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="8dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/d" />
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="8dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/c" />
 
                 </LinearLayout>
             </HorizontalScrollView>
